--- a/WaveCart_MERN_PROJECT/backend/.env
+++ b/WaveCart_MERN_PROJECT/backend/.env
@@ -1,1 +1,1 @@
-MONGODB_URI = mongodb+srv://hasib:hasib@321@mernecom.ln2pj4j.mongodb.net/MERNECOM?retryWrites=true&w=majority&appName=MERNECOM
+MONGO_URI="mongodb+srv://hasib:Hasib12345@mernecom.ln2pj4j.mongodb.net/MERNECOM?retryWrites=true&w=majority&appName=MERNECOM"
